hphp/test/slow/hash_comment/hash_comment.php.expectf
Fatal error: Encountered unexpected token `#`. in %s/test/slow/hash_comment/hash_comment.php on line 4
